增加左方選單文字

--- a/index1.html
+++ b/index1.html
@@ -5,15 +5,32 @@
 
 	<body  bgcolor="black">
 		<nav>
+			<br>
+			<br>
+			<h5><p class="white">教學頁面</p></h5>
 			<ul>
-				<li>物件導向程式概說</li>
-				<li>定義類別、變數、方法</li>
-				<li>Static vs. instance</li>
-				<li>Local vs. global</li>
-				<li>判斷式介紹</li>
-				<li>迴圈介紹</li>
-				<li>常見程式錯誤</li>
+				<leftChoose>
+				<li>  物件導向程式概說</li>
+				<li>  <a href = "index1.html" >定義類別、變數、方法</a></li>
+				<li>  Static vs. instance</li>
+				<li>  Local vs. global</li>
+				<li>  判斷式介紹</li>
+				<li>  迴圈介紹</li>
+				<li>  常見程式錯誤</li></leftChoose>
 			</ul>
+
+			<h5><p class="white">測驗頁面</p></h5>
+			<ul>
+				<leftChoose>
+				<li>  物件導向程式概說</li>
+				<li>  定義類別、變數、方法</li>
+				<li>  Static vs. instance</li>
+				<li>  Local vs. global</li>
+				<li>  判斷式介紹</li>
+				<li>  迴圈介紹</li>
+				<li>  常見程式錯誤</li></leftChoose>
+			</ul>
+			
 		</nav>
 
 		<section>
@@ -36,7 +53,7 @@
 				在上述舉例中，定義一個類別需要使用"class" 這個字，後面加上名字
 				接著寫上{}，在大括弧範圍內寫入變數(靜態特徵)，方法(動態行為)。</p>
 			
-			<a href = "weclome.html" target="content">return to index</a>
+			
 			<p class="demo">二、定義變數</p>
 			<blockquote>物件的特徵我們定義成變數</blockquote>
 			<blockquote>變數有下面的定義規則</blockquote>
@@ -54,7 +71,7 @@
 			<p class="green">定義變數的名字我們希望能從名字望文生義</p>
 			<p class="green">而使程式增加可讀性。</p>
 
-			<div class="pt">例如 int radius = 3;{</div>
+			<div class="pt">例如 int radius = 3;</div>
 			<p class="green">
 				在上述的例子中，我們定義了一個變數叫做radius，它的資料型態是整數(int)
 而這個變數它的值是3。</p>
@@ -62,7 +79,7 @@
 		</section>
 
 		<footer>
-			這裡要擺一值看見的東西
+			<a href = "weclome.html" target="content"><p class="white">return to index</p></a>
 		</footer>
 
 
