增加Static vs Instance頁面的連結

--- a/index1.html
+++ b/index1.html
@@ -13,7 +13,7 @@
 				<leftChoose>
 				<li>  物件導向程式概說</li>
 				<li>  <a href = "index1.html" >定義類別、變數、方法</a></li>
-				<li>  Static vs. instance</li>
+				<li>  <a href = "index2.html" >Static vs Instance</a></li>
 				<li>  Local vs. global</li>
 				<li>  判斷式介紹</li>
 				<li>  迴圈介紹</li>
