--- a/index1.html
+++ b/index1.html
@@ -8,13 +8,19 @@
 		<nav>
 			<br>
 			<br>
+			<h5><p class="white">新手上路</p></h5>
+			<ul>
+				<leftChoose>	
+					<li>環境安裝與第1個程式</li>
+				</leftChoose>
+			</ul>
 			<h5><p class="white">教學頁面</p></h5>
 			<ul>
 				<leftChoose>
 				<li>  物件導向程式概說</li>
 				<li>  <a href = "index1.html" >定義類別、變數、方法</a></li>
 				<li>  <a href = "index2.html" >Static vs Instance</a></li>
-				<li>  Local vs. global</li>
+				<li>  <a href = "index3.html" >Local vs. global</a></li>
 				<li>  判斷式介紹</li>
 				<li>  迴圈介紹</li>
 				<li>  常見程式錯誤</li></leftChoose>
@@ -23,13 +29,11 @@
 			<h5><p class="white">測驗頁面</p></h5>
 			<ul>
 				<leftChoose>
-				<li>  物件導向程式概說</li>
 				<li>  定義類別、變數、方法</li>
 				<li>  Static vs. instance</li>
 				<li>  Local vs. global</li>
 				<li>  判斷式介紹</li>
-				<li>  迴圈介紹</li>
-				<li>  常見程式錯誤</li></leftChoose>
+				<li>  迴圈介紹</li></leftChoose>
 			</ul>
 			
 		</nav>
@@ -76,6 +80,19 @@
 			<p class="green">
 				在上述的例子中，我們定義了一個變數叫做radius，它的資料型態是整數(int)
 而這個變數它的值是3。</p>
+
+			<p class="demo">三、定義方法</p>
+			<blockquote>另外，我們發現物體的動態行為，如：圓可以求面積，圓周長
+，在程式中定義為方法。定義語法如下：</blockquote>
+			<div class="pt">回傳的資料型態 方法名字(要傳入的參數){</div>
+			<br>
+			<div class="pt">}</div>
+			<br>
+			<div class="pt">例如:</div>
+			<div class="pt">int getTime(int now){</div>
+			<br>
+			<div class="pt">return area;</div>
+			<div class="pt">}</div>
 			
 		</section>
 
