--- a/index2.html
+++ b/index2.html
@@ -8,13 +8,19 @@
 		<nav>
 			<br>
 			<br>
+			<h5><p class="white">新手上路</p></h5>
+			<ul>
+				<leftChoose>	
+					<li>環境安裝與第1個程式</li>
+				</leftChoose>
+			</ul>
 			<h5><p class="white">教學頁面</p></h5>
 			<ul>
 				<leftChoose>
 				<li>  物件導向程式概說</li>
 				<li>  <a href = "index1.html" >定義類別、變數、方法</a></li>
 				<li>  <a href = "index2.html" >Static vs Instance</a></li>
-				<li>  Local vs. global</li>
+				<li>  <a href = "index3.html" >Local vs. global</a></li>
 				<li>  判斷式介紹</li>
 				<li>  迴圈介紹</li>
 				<li>  常見程式錯誤</li></leftChoose>
@@ -23,13 +29,11 @@
 			<h5><p class="white">測驗頁面</p></h5>
 			<ul>
 				<leftChoose>
-				<li>  物件導向程式概說</li>
 				<li>  定義類別、變數、方法</li>
 				<li>  Static vs. instance</li>
 				<li>  Local vs. global</li>
 				<li>  判斷式介紹</li>
-				<li>  迴圈介紹</li>
-				<li>  常見程式錯誤</li></leftChoose>
+				<li>  迴圈介紹</li>	</leftChoose>
 			</ul>
 			
 		</nav>
