--- a/index1.html
+++ b/index1.html
@@ -11,29 +11,29 @@
 			<h5><p class="white">新手上路</p></h5>
 			<ul>
 				<leftChoose>	
-					<li>環境安裝與第1個程式</li>
+					<li><a href = "index12.html" >環境安裝與第1個程式</a></li>
 				</leftChoose>
 			</ul>
 			<h5><p class="white">教學頁面</p></h5>
 			<ul>
 				<leftChoose>
-				<li>  物件導向程式概說</li>
+				<li>  <a href = "index0.html" >物件導向程式概說</a></li>
 				<li>  <a href = "index1.html" >定義類別、變數、方法</a></li>
 				<li>  <a href = "index2.html" >Static vs Instance</a></li>
 				<li>  <a href = "index3.html" >Local vs. global</a></li>
-				<li>  判斷式介紹</li>
-				<li>  迴圈介紹</li>
-				<li>  常見程式錯誤</li></leftChoose>
+				<li>  <a href = "index4.html" >判斷式介紹</a></li>
+				<li>  <a href = "index5.html" >迴圈介紹</a></li>
+				<li>  <a href = "index6.html" >常見程式錯誤</a></li></leftChoose>
 			</ul>
 
 			<h5><p class="white">測驗頁面</p></h5>
 			<ul>
 				<leftChoose>
-				<li>  定義類別、變數、方法</li>
-				<li>  Static vs. instance</li>
-				<li>  Local vs. global</li>
-				<li>  判斷式介紹</li>
-				<li>  迴圈介紹</li></leftChoose>
+				<li>  <a href = "index7.html" >定義類別、變數、方法</a></li>
+				<li>  <a href = "index8.html" >Static vs. instance</a></li>
+				<li>  <a href = "index9.html" >Local vs. global</a></li>
+				<li>  <a href = "index10.html" >判斷式介紹</a></li>
+				<li>  <a href = "index11.html" >迴圈介紹</a></li></leftChoose>
 			</ul>
 			
 		</nav>
